changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix regression introduced at revision 12136 by commenting an uncommented line
in experience table D (Table C is supposed to be used).  Reported by MarkM /
knotwork.  Causes server start failure  [Error]   Experience for level 116 is
lower than previous level (0 <= 67200000000).
Kevin Bulgrien 2009-08-10

Set perm XP to 50 and select experience table C to match the metalforge server
configuration.
Meflin 2009-08-08

Fix for tracker #2825935 `cast consecrate` regression introduced at revision
11827, Sat Jun 13 2009 in server/spell_effect.c that resulted in "You are
not standing over an altar!" even when standing on an altar.  The regression
caused the altar check to iterate over character inventory instead of
objects below the character.   Various spelling issues also corrected.
Kevin Bulgrien 2009-08-03

Fix whitespace issue with an attack message "viciously strikes".
Kevin Bulgrien 2009-08-01

Disembark transport when using dimension door from inside.
Andreas Kirschbaum 2009-07-14

Fix some grammar in server/login.c.
Kevin Bulgrien 2009-07-11

Fix some crashes observed on invidious due to access to uninitialized
variables.
Andreas Kirschbaum 2009-07-11

Fix player save file parser. Now usekeys and applymode settings are
retained between logins. Fixes #2819301 (usekeys setting no longer
persists across logout.)
Andreas Kirschbaum 2009-07-10

Fix some memory leaks when updating object->msg.
Andreas Kirschbaum 2009-07-09

Fix for bug 2.0 wraith feed auto-ready bug? - ID: 1989153 - unarmed skill
selection is hardcoded.  Add a command - 'unarmed_skill' in which player