@@ -14,6 +14,14 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix bug 2835449 pickup is broken by changing server/login.c check_login() to
+read the pickup value saved in the player file as an unsigned value instead
+of as a signed value.  Unfortunately corrupted player files still have the
+debug bit set, and this fix does not address that issue.  To fix the player
+file, zero out the pickup value, or adjust the value to turn off the debug
+bit.
+Kevin Bulgrien 2009-08-11
+
 Fix regression introduced at revision 12136 by commenting an uncommented line
 in experience table D (Table C is supposed to be used).  Reported by MarkM /
 knotwork.  Causes server start failure  [Error]   Experience for level 116 is
